{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 189,
  "lineage": "8d4ced36-879a-37dd-c9fa-8242d29ddaeb",
  "resources": [
    {
      "module": "module.alb.module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:763192996712:loadbalancer/app/nexus-ecs-alb/b7de990c405d71c1",
            "arn_suffix": "app/nexus-ecs-alb/b7de990c405d71c1",
            "desync_mitigation_mode": "defensive",
            "dns_name": "nexus-ecs-alb-1963817224.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-1:763192996712:loadbalancer/app/nexus-ecs-alb/b7de990c405d71c1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nexus-ecs-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0157eaf9d014bfa5b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-d271818a"
              },
              {
                "subnet_id": "subnet-dcda76b8"
              }
            ],
            "subnets": [
              "subnet-d271818a",
              "subnet-dcda76b8"
            ],
            "tags": {
              "Name": "nexus-ecs-alb"
            },
            "tags_all": {
              "Name": "nexus-ecs-alb"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-16978f73",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "module.alb.module.alb_sg.aws_security_group.this",
            "module.alb.module.alb_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.alb.module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:763192996712:listener/app/nexus-ecs-alb/b7de990c405d71c1/740a26034627565f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:763192996712:targetgroup/tg-nexus/dec3be4c8bdcf28b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:763192996712:listener/app/nexus-ecs-alb/b7de990c405d71c1/740a26034627565f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:763192996712:loadbalancer/app/nexus-ecs-alb/b7de990c405d71c1",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.module.alb.aws_lb.this",
            "module.alb.module.alb.aws_lb_target_group.main",
            "module.alb.module.alb_sg.aws_security_group.this",
            "module.alb.module.alb_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.alb.module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:763192996712:targetgroup/tg-nexus/dec3be4c8bdcf28b",
            "arn_suffix": "targetgroup/tg-nexus/dec3be4c8bdcf28b",
            "connection_termination": false,
            "deregistration_delay": "120",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:763192996712:targetgroup/tg-nexus/dec3be4c8bdcf28b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg-nexus",
            "port": 8081,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "tg-nexus"
            },
            "tags_all": {
              "Name": "tg-nexus"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-16978f73"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb.module.alb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:763192996712:security-group/sg-0157eaf9d014bfa5b",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0157eaf9d014bfa5b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "nexus-ecs-alb-sg-20230122185412165300000001",
            "name_prefix": "nexus-ecs-alb-sg-",
            "owner_id": "763192996712",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nexus-ecs-alb-sg"
            },
            "tags_all": {
              "Name": "nexus-ecs-alb-sg"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-16978f73"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb.module.alb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-2010133333",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0157eaf9d014bfa5b",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.module.alb_sg.aws_security_group.this",
            "module.alb.module.alb_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.alb.module.alb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-1693635751",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0157eaf9d014bfa5b",
            "security_group_rule_id": "sgr-070b4a834607f50d5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.module.alb_sg.aws_security_group.this",
            "module.alb.module.alb_sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-3336256227",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0157eaf9d014bfa5b",
            "security_group_rule_id": "sgr-047ab73f71294e5d5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.module.alb_sg.aws_security_group.this",
            "module.alb.module.alb_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.efs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:763192996712:security-group/sg-072c9ade38d5d1c3f",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-072c9ade38d5d1c3f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "nexus-efs-sg",
            "name_prefix": "",
            "owner_id": "763192996712",
            "revoke_rules_on_delete": false,
            "tags": {
              "environment": "dev",
              "managed_by": "Terraform",
              "project_name": "nexus"
            },
            "tags_all": {
              "environment": "dev",
              "managed_by": "Terraform",
              "project_name": "nexus"
            },
            "timeouts": null,
            "vpc_id": "vpc-16978f73"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.efs",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 2049,
            "id": "sgrule-394181944",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-072c9ade38d5d1c3f",
            "security_group_rule_id": "sgr-017c50694f2dd3cad",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.efs.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.task_and_service.module.ecs_alb_service_task",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:763192996712:security-group/sg-0508371fcaa34eaa7",
            "description": "Allow ALL egress from ECS service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic to any IPv4 address",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0508371fcaa34eaa7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow inbound traffic from ALB",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0157eaf9d014bfa5b"
                ],
                "self": false,
                "to_port": 8081
              }
            ],
            "name": "nexus-ecs-service-service",
            "name_prefix": "",
            "owner_id": "763192996712",
            "revoke_rules_on_delete": false,
            "tags": {
              "Attributes": "service",
              "Name": "nexus-ecs-service-service",
              "environment": "dev",
              "managed_by": "Terraform",
              "project_name": "nexus"
            },
            "tags_all": {
              "Attributes": "service",
              "Name": "nexus-ecs-service-service",
              "environment": "dev",
              "managed_by": "Terraform",
              "project_name": "nexus"
            },
            "timeouts": null,
            "vpc_id": "vpc-16978f73"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.task_and_service.module.ecs_alb_service_task",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow inbound traffic from ALB",
            "from_port": 8081,
            "id": "sgrule-1065434912",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0508371fcaa34eaa7",
            "security_group_rule_id": "sgr-048e8b6f14ed75206",
            "self": false,
            "source_security_group_id": "sg-0157eaf9d014bfa5b",
            "timeouts": null,
            "to_port": 8081,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.module.alb_sg.aws_security_group.this",
            "module.alb.module.alb_sg.aws_security_group.this_name_prefix",
            "module.task_and_service.module.ecs_alb_service_task.aws_security_group.ecs_service"
          ]
        }
      ]
    },
    {
      "module": "module.task_and_service.module.ecs_alb_service_task",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic to any IPv4 address",
            "from_port": 0,
            "id": "sgrule-1561145262",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0508371fcaa34eaa7",
            "security_group_rule_id": "sgr-07dbbe736ac442269",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.task_and_service.module.ecs_alb_service_task.aws_security_group.ecs_service"
          ]
        }
      ]
    }
  ]
}